Everything from the Mercurial jemmy repository at openjdk, that doesn't break SwingLibrary integration tests have been merged. Some Java 8 Lambda expressions have been reworked into non-lambda ones to support Java 7.